--- a/greybox/index.html
+++ b/greybox/index.html
@@ -80,6 +80,7 @@
 			#featured h1,#featured h2,#featured h3,#featured h4,#featured h5,#featured h6{margin:.5em 0;}
 			#featured h1 a, #feaured h2 a, #featured h3 a, #featured h4 a, #featured h5 a{color: #3F3F3F;border: none;}
 			#featured p{letter-spacing: .005em;font-size: 12px;margin-bottom: 12px;}
+			.intro, .callout{font-weight: 600 !important;}
       h4, .h4{font-size: 1.15em !important;}
       blockquote::before {content:"“" !important;}
       blockquote::after {content:"”" !important;}
@@ -310,6 +311,7 @@
 							<ul class="dropdown-menu">
 								<li class=""><a href="http://www.joeldombek.com/about/">About</a></li>
 								<li class=""><a href="#">How I Work</a></li>
+								<li class=""><a href="#">Annual Report</a></li>
 								<li class=""><a href="http://www.joeldombek.com/resume/">Resume</a></li>
 								<li class=""><a href="http://www.joeldombek.com/contact/">Contact</a></li>
 							</ul>
@@ -557,7 +559,7 @@
 			      <div class="carousel-inner" role="listbox">
 
 							<div class="item active">
-								<div class="stats-hero navy2"></div>
+								<div class="stats-hero blush"></div>
 								<div class="module-overlay">
 									<div class="container">
 										<p class="category">QUOTES / INSIGHT NO: 106</p>
@@ -567,7 +569,7 @@
 							</div>
 
 			        <div class="item">
-								<div class="stats-hero blush"></div>
+								<div class="stats-hero navy"></div>
 								<div class="module-overlay">
 									<div class="container">
 										<p class="category">QUOTES / INSIGHT NO: 104</p>
@@ -581,7 +583,7 @@
 								<div class="module-overlay">
 									<div class="container">
 										<p class="category">QUOTES / INSIGHT NO: 105</p>
-										<p class="module-title">Give a shit.</p>
+										<p class="module-title"><u>Always</u> give a shit.</p>
 									</div>
 								</div>
 			        </div>
@@ -611,7 +613,7 @@
 								<div class="module-overlay">
 									<div class="container">
 										<p class="category">QUOTES / INSIGHT NO: 109</p>
-										<p class="module-title">Punch anyone right in the mouth if they tell you you can't.</p>
+										<p class="module-title">If the users can't find it, the functionality isn't there.</p>
 									</div>
 								</div>
 							</div>
