--- a/greybox/index.html
+++ b/greybox/index.html
@@ -14,6 +14,7 @@
 			exch coinbase: https://exchange.coinbase.com/
 			dropbox: https://www.dropbox.com/home/Resume
 			welathfront: https://www.wealthfront.com/
+			antlr: ttp://www.antlr-interactive.com/blog
 
 			NOTES:
 			use SVG icons for hero sections with graphics
@@ -95,6 +96,18 @@
       blockquote::before {content:"“" !important;}
       blockquote::after {content:"”" !important;}
 			figcaption{color: #545454;}
+			@media (min-width: 768px){
+				.module-article > hr.dashed{
+					display: block;
+					width: 30%;
+					border-bottom: 1px solid #545454;
+					border-top:none;
+					margin-right: 57.66666666666667%;
+					margin-top: 2.5em;
+					margin-bottom: 2.5em;
+				}
+			}
+			hr.dashed{display: block; width: 100%; border-bottom: 2px dashed #545454;}
 			mark{background-color: #FFFF9E; color: #545454;}
       /*DISPLAYS LIGHTER THAN NON_ITALIC*/
       /*cite{font-style: italic;}*/
@@ -570,6 +583,8 @@
 				<h3>Header h3</h3>
 				<p class="lead">Brands are no longer definitive. They are temporal. Brands are informed by multiple voices, and they exist in multiple mediums and through multiple contexts. The media that a brand inhabits is no longer fixed or linear, it is iterative, with no beginning, no end, and little permanency.</p>
 				<p class="lead">Adherence to a big idea and endless <strong>repetition of centralized</strong>, fixed rules can make a brand seem unresponsive, mechanized, inhuman, and out of step with its audience. But without repetition, how does a brand create consistency? And without consistency, how does a brand maintain value?</p>
+
+				<hr class="dashed"/>
 
         <h4>Header h4</h4>
 				<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis <mark>ipsum eu, porttitor diam. Phasellus ac efficitur magna</mark>. Duis fermentum augue velit, id pretium turpis euismod ut. Suspendisse lobortis bibendum elit, sed tempor risus dignissim faucibus. Suspendisse sed massa id nibh dictum elementum ut nec dolor. Sed id dui eget ipsum scelerisque pharetra sed ut dolor. Duis sed nisl eget tellus posuere elementum ac id massa.</p>
