--- a/greybox/index.html
+++ b/greybox/index.html
@@ -1100,7 +1100,7 @@
 							<div class="container">
 								<div class="quote-outer">
 									<!-- <img style="width:60%;display:block;margin:auto 0;vert-align:middle;position:absolute;top:50%;bottom:50%;" src="img/front-end.png"/> -->
-									<img class="svg svg-frontend" style="width:60%;display:block;margin:auto 0;vert-align:middle;position:absolute;top:50%;bottom:50%;" src="img/front-end.svg" alt=".front-end{}">
+									<img width="50%" height="auto" class="svg svg-frontend" style="width:60%;display:block;margin:auto 0;vert-align:middle;position:absolute;top:50%;bottom:50%;" src="img/front-end.svg" alt=".front-end{}">
 								</div>
 							</div>
 						</div>
