--- a/greybox/index.html
+++ b/greybox/index.html
@@ -381,7 +381,8 @@
 			/*##########################
 					SPOTIFY PLAYER
 			###########################*/
-			#container > div.main, #spotify .main{border: none !important;}
+			#container > div.main, .spotify .main, .spotify *{border: none !important;}
+			.theme-white #container .main, {border:none !important;}
 
 			/*##########################
 					SOCIAL BELOW
@@ -1017,7 +1018,7 @@
 					<!-- ########################################################################
 					SHOULD BREAK INTO SEPERATE COL-MD-4 SECTION TO ALLOW FOR IMAGES ALONG SIDE
 					########################################################################-->
-					<div #spotify style="width:100%;">
+					<div class="spotify" style="width:100%;">
 						<!-- SPOTIFY RESPONSIVE PLAYER -->
 						<iframe src="https://embed.spotify.com/?uri=spotify:user:joeldombek:playlist:7ofhmgRPvpUG8Q4i81HuAT&theme=white" width="340" height="80" frameborder="0" allowtransparency="true"></iframe>
 					</div><!-- end respondify -->
@@ -2097,6 +2098,12 @@
 			$(window).resize(function() {
 			respondify();
 		});
+		</script>
+		<script>
+			$('iframe').load( function() {
+				$('iframe').contents().find("head")
+				.append($("<style type='text/css'>  .main{border:none !important;}  </style>"));
+			});
 		</script>
 		<script>
 			/*
