--- a/greybox/index.html
+++ b/greybox/index.html
@@ -139,12 +139,14 @@
 				top: 0; bottom: 0;
 				right: 0; left: 0;
 				display: none;
-				background: white;
+				background: rgba(255,255,255,.95);
+				z-index: 9999;
 			}
 
 			#overlay input {
 				padding: 20px;
-				font-size: 16px;
+				font-size: 6em;
+				font-weight: 900;
 				border: 0;
 				margin: 40px;
 			}
@@ -154,7 +156,8 @@
 				top: 20px;
 				right: 20px;
 				font-weight: bold;
-				/* http://jsfiddle.net/peduarte/VeRMW/?utm_source=website&utm_medium=embed&utm_campaign=VeRMW */
+				cursor: pointer;
+
 			}
       button{background: transparent;border:none;color: white;}
 
@@ -469,7 +472,7 @@
       /*##########################
           BLOG TABS
       ###########################*/
-			#blog-section .nav > li > a{padding:0 15px 10px 0;border:none;border-bottom-style: none;}
+			#blog-section .nav > li > a, #blog-section #search{padding:0 15px 10px 0;border:none;border-bottom-style: none;}
 			#blog-section .nav-tabs > li.active > a, .nav-tabs > li.active > a:link{background-color: none !important; border:none;border-bottom-style: none;}
 			#blog-section .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{background-color: none;border-bottom-style: none;}
 			#blog-section .nav-tabs > li > a:hover{background-color: none !important; border-bottom:2px solid white;}
@@ -477,6 +480,9 @@
 			#blog-section .nav-tabs > li > a:hover, #blog-section .nav-tabs > li > a:focus,
 			#blog-section .nav-tabs > li.active > a:hover, #blog-section .nav-tabs > li.active > a:focus {border: none; border-bottom: 4px solid white;}
 
+			#blog-section #search{
+
+			}
 			/*BLOG LIST POSTS*/
 			.blog-list-row a.post-image-link{min-height: 228px;display: block;border: none;}
 			@media (max-width: 991px){
@@ -1061,7 +1067,7 @@
 				<img src="img/tilex2x.png"/>
 				<div class="module-overlay palette-grey40  palette-inverse">
 					<h4>Header h4</h4>
-					<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis ipsum eu, porttitor diam. Phasellus ac efficitur magna. Duis fermentum augue velit, id pretium turpis euismod ut. Suspendisse lobortis bibendum elit, sed tempor risus dignissim faucibus. Suspendisse sed massa id nibh dictum elementum ut nec dolor. Sed id dui eget ipsum scelerisque pharetra sed ut dolor. Duis sed nisl eget tellus posuere elementum ac id massa.</p>
+					<p>Normal Paragraph with filler lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in elit varius, viverra nisl eget, ornare odio. Proin sit amet tellus nulla. Aliquam lacus ante, scelerisque in congue vitae, porttitor nec massa. Ut massa libero, congue ac faucibus id, interdum a ante. Praesent vel lectus varius, venenatis ipsum eu, porttitor diam. <a href="LINK">Read More</a></p>
 				</div>
 			</div>
 		</div><!-- /container -->
@@ -1248,14 +1254,15 @@
           <div class="container">
             <h1 class="module-title">BLOG</h1>
 						<div class="row">
-							<div class="col-xs-12">
+							<div class="col-xs-10">
 								<ul class="nav nav-tabs" role="tablist">
 									<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Main</a></li>
 									<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
 									<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
 									<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-									<li id="search" class="pull-right"><a href="#"><i class="material-icons">search</i> Search</a></li>
+									<li class="pull-right"></li>
 								</ul>
+
 								<!-- Tab panes -->
 								<div class="tab-content">
 									<div role="tabpanel" class="tab-pane active" id="home"></div>
@@ -1283,6 +1290,9 @@
 									</div>
 								</div>
 								<!-- Tab panes -->
+							</div>
+							<div class="col-xs-2">
+								<a id="search" href="#"><i class="material-icons">search</i> Search</a>
 							</div>
 
 							<!-- <div class="addthis_toolbox">
@@ -2100,8 +2110,8 @@
 		</div><!-- /container -->
 
 		<div id="overlay">
-    	<input type="text" value="Search...">
-    	<span id="close">Close</span>
+    	<input name="Search" type="text" onfocus="if(this.value == 'value') { this.value = ''; }" value="Search" />
+    	<span id="close"><a href="#search" style="text-decoration:none;">Close</a></span>
 		</div>
 
     <!-- Scripts -->
@@ -2255,6 +2265,26 @@
     	});
 
 		});
+		</script>
+
+		<script type="text/javascript">
+		//focus search input
+		$('body').on('keydown', function() {
+			var input = $('input[name="Search"]');
+
+			if(!input.is(':focus')) {
+				input.focus();
+			}
+		});
+		//$(document).on('keydown', function(){
+    //	var input = $('input[name="Search"]');
+    //	$('#search').click(function(){
+    //    if ( $overlay.is(':visible') ) {
+    //        $overlay.fadeOut();
+    //    } else {
+    //        $overlay.fadeIn();
+    //    }
+    //	});
 		</script>
 
   </body>
