--- a/greybox/index.html
+++ b/greybox/index.html
@@ -406,8 +406,7 @@
 			/*##########################
 					SPOTIFY PLAYER
 			###########################*/
-
-			#container > div.main{border: none !important;}
+			#container > div.main, #spotify .main{border: none !important;}
 
 			/*##########################
 					SOCIAL BELOW
@@ -1046,7 +1045,8 @@
 					<!-- ########################################################################
 					SHOULD BREAK INTO SEPERATE COL-MD-4 SECTION TO ALLOW FOR IMAGES ALONG SIDE
 					########################################################################-->
-					<div style="width:100%;">
+
+					<div #spotify style="width:100%;">
 						<!-- SPOTIFY RESPONSIVE PLAYER -->
 						<iframe src="https://embed.spotify.com/?uri=spotify:user:joeldombek:playlist:7ofhmgRPvpUG8Q4i81HuAT&theme=white" width="340" height="80" frameborder="0" allowtransparency="true"></iframe>
 					</div><!-- end respondify -->
